# Working

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
config/: default.toml  local.toml
crates/cli/: Cargo.toml
crates/cli/src/: apply.rs  bin_utils.rs  fs_apply.rs  keyword_index.rs  lib.rs  main.rs  merge_duplicate_tests.rs  paths.rs  undo.rs  watch.rs
crates/cli/tests/: apply_undo.rs  pipeline.rs  watch_helpers.rs
crates/core/: Cargo.toml
crates/core/src/: classifier.rs  config.rs  embeddings.rs  extractor.rs  indexer.rs  lib.rs  models.rs  pipeline.rs  rules.rs  scanner.rs  search.rs  suggester.rs  vectorstore.rs
crates/providers/: Cargo.toml
crates/providers/src/: lib.rs  lmstudio.rs  noop.rs  openai.rs  qdrant.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 001_init.sql  002_file_hashes.sql
crates/storage/src/: lib.rs
data/: organizer.db
data/.organizer_keyword_index/: .managed.json  .tmpQnhqFb  meta.json
desktop/: .gitignore
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: MVP.md  architecture.md  desktop_tauri_plan.md  qdrant.md
prompt_templates/: classify.toml
rules/: archives_to_inbox.toml  images_to_photos.toml  office_to_documents.toml  pdfs_to_documents.toml  sample.toml
scripts/: cargo-devshell.bat  qdrant-init.sh
