[workspace]
members = [
    "crates/core",
    "crates/cli",
    "crates/providers",
    "crates/storage",
    "desktop/src-tauri"
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["You <you@example.com>"]
license = "MIT"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "1"
config = "0.13"
walkdir = "2"
globset = "0.4"
blake3 = "1"
async-trait = "0.1"
chrono = "0.4"

[patch.crates-io]
# Pin zstd to Windows-friendly revisions for Tantivy (keyword-index).
zstd = { git = "https://github.com/gyscos/zstd-rs", rev = "12867809bf3cccf4531c597548ca8bbf14696730" } # v0.12.3
zstd-safe = { git = "https://github.com/gyscos/zstd-rs", rev = "12867809bf3cccf4531c597548ca8bbf14696730" }
zstd-sys = { git = "https://github.com/gyscos/zstd-rs", rev = "12867809bf3cccf4531c597548ca8bbf14696730" }
