[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
config.workspace = true
tracing-subscriber = "0.3"
organizer-core = { path = "../core" }
clap = { version = "4.5", features = ["derive"] }
serde_json.workspace = true
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
storage = { path = "../storage" }
serde.workspace = true
trash = "3.0.1"
tempfile = { version = "3", optional = true }
chrono.workspace = true
tantivy = { version = "0.21", optional = true, default-features = false, features = ["mmap"] }
notify = "6"

[dev-dependencies]
tempfile = "3"

[features]
default = []
keyword-index = ["tantivy"]
