[package]
name = "organizer-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
config.workspace = true
walkdir.workspace = true
globset.workspace = true
blake3.workspace = true
providers = { path = "../providers" }
storage = { path = "../storage" }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
async-trait.workspace = true
toml = "0.5"
pdf-extract = { version = "0.7", optional = true }
kamadak-exif = { version = "0.5", optional = true }

[features]
default = []
pdf = ["pdf-extract"]
exif = ["kamadak-exif"]
