[package]
name = "organizer-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
config.workspace = true
walkdir.workspace = true
globset.workspace = true
blake3.workspace = true
providers = { path = "../providers" }
storage = { path = "../storage" }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
async-trait.workspace = true
toml = "0.5"
pdf-extract = { version = "0.7", optional = true }
kamadak-exif = { version = "0.5", optional = true }
infer = "0.15"
calamine = { version = "0.22", optional = true }
lopdf = { version = "0.32", optional = true }
docx-rs = { version = "0.4", optional = true }
image = { version = "0.24", optional = true, default-features = false, features = ["png", "jpeg"] }
leptess = { version = "0.5", optional = true }
quick-xml = "0.31"
zip = { version = "0.6", optional = true }

[features]
default = []
pdf = ["pdf-extract", "lopdf"]
exif = ["kamadak-exif"]
office = ["calamine", "docx-rs", "zip"]
image-meta = ["image"]
ocr = ["leptess"]
