[package]
name = "providers"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true
reqwest = { version = "0.11", features = ["json", "gzip", "stream"] }
bytes = "1"
