[package]
name = "organizer-desktop"
version = "0.1.0"
description = "Organizer desktop app (Tauri shell)"
authors = ["You <you@example.com>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# We'll wire these in next steps for backend reuse.
# organizer-core = { path = "../../crates/core" }
# storage = { path = "../../crates/storage" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
